@@ -1,3 +1,8 @@
+2009-05-25  Stipe Tolj  <stolj at kannel.org>
+    * doc/userguide/userguide.xml: fixing bug 'document type does not allow element 
+      "PARA" here; missing one of "FOOTNOTE", "MSGTEXT", "CAUTION", "IMPORTANT", 
+      "NOTE", "TIP", "WARNING", "BLOCKQUOTE", "INFORMALEXAMPLE" start-tag'.
+    
 2009-05-20 Alexander Malysh <amalysh at kannel.org>
     * gw/smsc/smsc_smpp.c: some SMSCs have submit/done date with seconds. Now we
       can parse it sscanf way.
